# penny

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LLM-OVERVIEW.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/skills/beads/: SKILL.md
.claude/skills/create-handoff/: SKILL.md
.claude/skills/delegate-to-agent/: SKILL.md
.claude/skills/failure-recovery/: SKILL.md
.claude/skills/implement-plan/: SKILL.md
.claude/skills/oneshot-core/: SKILL.md
.claude/skills/push-to-cloud/: SKILL.md
.claude/skills/refactorer/: SKILL.md
.claude/skills/resume-handoff/: SKILL.md
deploy/: install.sh  penny.service
docs/: CLAUDE_CODE_SETUP.md
penny/: __init__.py  classifier.py  database.py  main.py  model_selector.py  models.py  router.py  service_router.py
penny/config/: __init__.py  claude_code.py
penny/integrations/: __init__.py  atlas.py  calendar.py  claude_code.py  deploy.py  google_keep.py  jellyseerr.py  notes.py  reminders.py  telegram.py  telegram_qa.py  trojanhorse.py
penny/orchestrator/: __init__.py  escalation.py  loop.py  probes.py
penny/utils/: __init__.py  datetime_parser.py
scripts/: setup_google_keep.py  setup_telegram_webhook.sh
static/: style.css
tests/: conftest.py  test_classifier.py  test_claude_code.py  test_model_selector.py  test_models.py  test_orchestrator.py  test_router.py
watcher/: com.penny.watcher.plist  requirements.txt  watcher.py
